syntax = "proto3";//版本号
package pb;//包名
option go_package = "/internal/service;service";

//protoc -I internal/service/pb internal/service/pb/*.proto --go_out=. --go-grpc_out=require_unimplemented_servers=false:.
//protoc-go-inject-tag -input="internal/service/*.pb.go"
message TaskModel {
  // @inject_tag: json:"task_id" form:"task_id"
  int64 TaskID=1;
  // @inject_tag: json:"user_id" form:"user_id"
  int64 UserID=2;
  // @inject_tag: json:"status" form:"status"
  int64 Status=3;
  // @inject_tag: json:"title" form:"title"
  string Title=4;
  // @inject_tag: json:"content" form:"content"
  string Content=5;
  // @inject_tag: json:"start_time" form:"start_time"
  int64 StartTime=6;
  // @inject_tag: json:"end_time" form:"end_time"
  int64 EndTime=7;
}